html aangepast met een paragraaf

--- a/www/6-demo-site/index.html
+++ b/www/6-demo-site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Demo-site DWW2</title>
-    <link href="sstyles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -26,6 +26,7 @@
           <!-- main content goes here -->
           <article class="main">
             <h2>Article Title</h2>
+	    <p>Even een aanpassing maken met mijn feature branch</p>
             <p>
               <img
                 src="imgs/clouds.jpg"
